fix: color for dark mode visibility

--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@
   --bg-error: #fab7b7;
   --color-error: #6d0909;
   --bg-normal: #bfd0fd;
-  --color-normal: #13096d;
+  --color-normal: #4c43a07e;
   --bg-grey: #d9dadb;
   --color-dark-alt: #18171b;
 
